--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "lucide-react": "^0.544.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "react-helmet": "^6.1.0",
     "react-icons": "^5.5.0",
     "react-simple-typewriter": "^5.0.1",
     "tailwindcss": "^4.1.13"
